# petrespling-desktop

./: .gitattributes  CHANGELOGS.md  Cargo.toml  LICENSE  README.md  build.rs  resources.qrc
src/: Advanced.qml  Options.qml  Paint.qml  Resize.qml  Speed.qml  main.rs  rcc.cpp  rccbridge.cpp  resp.qml  wah.cpp  wah.h
