[package]
name = "respling"
version = "1.1.0"
authors = ["respnull <respnull@users.noreply.github.com>"]
edition = "2024"
description = "A Respling in your desktop!"
license = "Apache-2.0"

[dependencies]
qmetaobject = "0.2.10"
image = "0.25"
base64 = "0.22"

[build-dependencies]
qmetaobject = "0.2"
cc = "1.0"
